--- a/vignettes/02_03_dimension-reduction.Rmd
+++ b/vignettes/02_03_dimension-reduction.Rmd
@@ -135,17 +135,15 @@ Despite this, it is most common for people to perform row-centering and then plo
 What happens if we introduce a single outlying gene
 ```{r}
 edata_outlier = edata_centered
-edata_outlier[1,] = edata_centered[1,] * 10000
+edata_outlier[6,] = edata_centered[6,] * 10000
 svd3 = svd(edata_outlier)
-par(mfrow=c(1,2))
-plot(svd1$v[,1],col=1,main="Without outlier")
-plot(svd3$v[,1],col=2,main="With outlier")
+plot(svd1$v[,1],svd3$v[,1],xlab="Without outlier",ylab="With outlier")
 ```
 
 It turns out the new top singular vector is perfectly correlated with the outlying gene
 
 ```{r}
-plot(svd3$v[,1],edata_outlier[1,],col=4)
+plot(svd3$v[,1],edata_outlier[6,],col=4)
 ```
 
 
