Add dplyr dependency for filter

--- a/vignettes/01_11_transforms.Rmd
+++ b/vignettes/01_11_transforms.Rmd
@@ -22,12 +22,14 @@ This document depends on the following packages:
 suppressPackageStartupMessages({
   library(devtools)
   library(Biobase)
+  library(dplyr)
 })
 ```
 
 ```{r load}
   library(devtools)
   library(Biobase)
+  library(dplyr)
 ```
 
 
