--- a/vignettes/01_10_exploratory-analysis.Rmd
+++ b/vignettes/01_10_exploratory-analysis.Rmd
@@ -149,8 +149,8 @@ We can also look at this sample by sample with histograms
 
 ```{r histograms}
 par(mfrow=c(1,2))
-hist(log2(edata[,1]+1),col=2)
-hist(log2(edata[,2]+1),col=2)
+hist(log2(edata[,1]+1),col=2, cex.main=0.8)
+hist(log2(edata[,2]+1),col=2, cex.main=0.8)
 ```
 
 Or with density plots
